# degenbot

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  foundry.toml  justfile  pyproject.toml  rapportslither-followup.md  rapportslither.md
.claude/: README.md
.claude/agents/: aave-revision-math-auditor.md  codebase-analyzer.md  codebase-locator.md  codebase-pattern-finder.md  deepagents-workflow-analyst.md  defillama-source-miner.md  evm-transaction-investigator.md  execution-boundary-guardian.md  institutional-solver-intelligence.md  langchain-agent-platform-researcher.md  langgraph-workflow-architect.md  langsmith-eval-observability-analyst.md  stylus-port-parity-auditor.md
.claude/commands/: commit.md  create_plan.md  create_worktree.md  debug_aave.md  defillama_protocol_intel.md  implement_plan.md  local_review.md  research_codebase.md  validate_plan.md
contracts/: command_executor.vy
debug/: adapter-20260601-145327.jsonl  adapter-20260601-150137.jsonl  adapter-20260601-150204.jsonl
debug/aave/: 0001 - V4 Debt Burn Rounding Error.md  0004 - Interest Accrual Scaling Error in Enrichment.md  0007 - Interest Accrual Burn Amount Zeroed in Enrichment.md  0009 - Liquidation Collateral Burn Amount Extraction Bug.md  0012 - V4 Withdraw Emits Mint When Interest Exceeds Withdrawal.md  0013 - WITHDRAW Interest Accrual Mint Matching with Rounding Tolerance.md  0016 - REPAY with Interest Exceeding Repayment Uses Wrong Rounding.md  0019a - MINT_TO_TREASURY Formula Error for Pool Revision 1.md  0020 - MINT_TO_TREASURY Version Check Refactoring.md  0023 - Liquidation Collateral Burn Asset Mismatch in Multi-Liquidation Transactions.md  0026 - Liquidation Debt Burn Unit Mismatch in Matching.md  0029 - Multi-Asset Liquidation Missing Secondary Debt Burns Fix.md  0037 - REPAY Uses Mint Event Instead of Repay Event Amount.md  0038 - GHO REPAY Missing Discount Scaled Amount in Balance Update.md  0040 - 1 Wei Rounding Error in REPAY_WITH_ATOKENS Debt Burn.md  0041 - Treasury Fee Collection from Liquidations.md  0042 - Pool Revision 9 Liquidation Debt Amount Already Scaled.md  0043 - Multi-Liquidation Secondary Debt Burn Misclassification.md  0045 - Liquidation Validation Treats Debt Mint as Multiple Burns.md  0050 - Multi-Liquidation Same Debt Asset Burn Misassignment.md  0051 - Bad Debt Liquidation Debt Burn Matching Uses Only Principal Amount.md  0053 - Multi-Liquidation Same Asset GHO Liquidation Validation Error.md  (+4 more)
docs/: config.md  workspace-index.md
rust/: AGENTS.md  Cargo.toml
rust/crates/contract_bindings/: Cargo.toml
rust/crates/contract_bindings/src/: atomic_executor.rs  base_mev_paymaster.rs  executor.rs  i_executor.rs  i_executor_aave_pool.rs  i_executor_erc3156_flash_lender.rs  i_mev_safe_account.rs  i_mev_safe_erc1271.rs  i_path_finder.rs  i_reactor_callback.rs  i_uniswap_v4_hook.rs  lib.rs  liquidation_executor.rs  lp_transfer_lib.rs  mev_bot_delegate.rs  mev_paymaster_v9.rs  mev_safe.rs  mev_safe_factory.rs  multi_hop_caller.rs  path_finder.rs  path_finder_venue.rs  permission_token.rs  router_registry.rs  strategy_ledger.rs  token_standard_ids.rs  transient_storage.rs
rust/src/: abi_decoder.rs  abi_encoder.rs  address_utils.rs  alloy_py.rs  async_provider.rs  contract_bindings.rs  errors.rs  execution.rs  execution_engine.rs  execution_engine_py.rs  execution_py.rs  fixed_abi.rs  lib.rs  provider.rs  provider_py.rs  py_cache.rs  py_converters.rs  runtime.rs  signature_parser.rs  signed_order_admission.rs  signed_order_admission_py.rs  simulation_py.rs
rust/src/abi_types/: cached.rs  value.rs
rust/src/decision/: mod.rs  sandoo_ideas.rs
rust/src/executor/: gas.rs  inclusion.rs  lane.rs  mod.rs  nonce.rs  preflight.rs  signer.rs  tx_builder.rs
rust/src/matching/: internal_matcher.rs  mod.rs  price_compat.rs
rust/src/monitor/: feed.rs  mod.rs  sequencer_broadcast.rs  sequencer_feed.rs  sequencer_subscriber.rs  sync_event.rs  types.rs  ws.rs
rust/src/simulation/: curve.rs  curve_optimize.rs  mod.rs  rehackt.rs  revm_db.rs  v2.rs  v2_optimize.rs  v3.rs  v3_optimize.rs  v4.rs
rust/src/simulation/uniswap_v3_math/: bit_math.rs  full_math.rs  liquidity_math.rs  mod.rs  sqrt_price_math.rs  swap_math.rs  tick_bitmap.rs  tick_math.rs  unsafe_math.rs
rust/src/types/: README.md  executor.rs  mod.rs  settlement.rs  wire.rs
rust/src/utils/: adaptive_timeout.rs  averager.rs  metrics.rs  mod.rs  nonce.rs  u256.rs  window.rs
rust/tests/: contract_bindings.rs  python_integration.rs
scripts/: aave_debug_helper.py  claude_spec_metadata.sh  defillama_reference_checkout.sh  start_trace_adapter.sh  stop_trace_adapter.sh
stylus/: Cargo.toml  OFFCHAINLABS_STYLUS.md  PORTING_STATUS.md  README.md  REFERENCES.md  UPGRADE_READINESS.md  WASM_TOOLING.md  test_hostio_shims.rs
stylus/core/: Cargo.toml  Stylus.toml  rust-toolchain.toml
stylus/core/src/: account_semantics.rs  auth_semantics.rs  bit_math.rs  contract_manifest.rs  executor_abi.rs  executor_semantics.rs  frontrun_calldata.rs  interface_surfaces.rs  lib.rs  lib_uniswap.rs  lp_transfer_lib.rs  main.rs  mega_mev_optimization.rs  poc_fail_closed.rs  port_parity_tests.rs  router_registry.rs  runtime_adapter.rs  singleton_arrays.rs  step_merging.rs  swapper_semantics.rs  token_risk_filter.rs  token_standard_ids.rs  transient_slots.rs  upgrade_policy.rs
stylus/executor_abi_adapter/: Cargo.toml  rust-toolchain.toml
stylus/executor_abi_adapter/src/: lib.rs  main.rs
stylus/lp_transfer_adapter/: Cargo.toml  rust-toolchain.toml
stylus/lp_transfer_adapter/src/: lib.rs  main.rs
stylus/pool_adapter/: Cargo.toml
stylus/pool_adapter/src/: lib.rs  main.rs
stylus/runtime_adapter/: Cargo.toml
stylus/runtime_adapter/src/: lib.rs  main.rs
stylus/token_risk_adapter/: Cargo.toml
stylus/token_risk_adapter/src/: lib.rs  main.rs
stylus/tools/: wasm-inspect.sh
tests/: conftest.py  test_aave_cli_integrations.py  test_abi_adapter.py  test_alchemy_provider.py  test_bot.py  test_cli.py  test_cli_rpc_config.py  test_cvxpy.py  test_dispatch.py  test_foundry_bindings_workflow.py  test_pipeline.py  test_solady.py
(+450 files in other folders)
