[build-system]
requires = ["maturin ~= 1.12"]
build-backend = "maturin"

[project]
name = "degenbot"
version = "0.6.0a2"
authors = [
    { name="BowTiedDevil", email="devil@bowtieddevil.com" },
]
description = "Python classes to aid rapid development of Uniswap (V2, V3, V4), Curve V1, and Solidly V2 arbitrage bots on EVM-compatible blockchains"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic ~= 1.18",
    "aiohttp ~= 3.13",
    "click ~= 8.3",
    "cvxpy ~= 1.8",
    "eth-account ~= 0.13",
    "httpx ~= 0.28",
    "networkx ~= 3.6",
    "prometheus-client ~= 0.23",
    "pydantic ~= 2.12",
    "pydantic-settings ~= 2.13",
    "scipy ~= 1.17",
    "sqlalchemy ~= 2.0",
    "structlog ~= 25.5",
    "tenacity ~= 9.1",
    "tomlkit ~= 0.14",
    "tqdm ~= 4.67",
    "ujson ~= 5.12",
    "web3 ~= 7.14",
]
license = {text = "MIT"}
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX",
]

[project.urls]
Homepage = "https://www.degencode.com"
Repository = "https://github.com/BowTiedDevil/degenbot"
Tracker = "https://github.com/BowTiedDevil/degenbot/issues"
Twitter = "https://twitter.com/BowTiedDevil"

[project.scripts]
degenbot = "degenbot.cli:cli"

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:", # exclude type checking imports and checks
    "return NotImplemented", # required for __eq__, __lt__, __gt__
    "def __hash__",
    "def __repr__",
    "def __str__",
    "logger.debug",
    "assert_never",
    "case _",
]

[tool.coverage.run]
source = ["src/degenbot"]
parallel = true
branch = true

[tool.mypy]
plugins = ["pydantic.mypy"]
files=["src/degenbot"]
python_version = "3.12"
python_executable = ".venv/bin/python"
untyped_calls_exclude = "cvxpy"

[[tool.mypy.overrides]]
module="degenbot.*"
strict = true

[[tool.mypy.overrides]]
module=[
    "ape",
    "ape_arbitrum",
    "scipy.*",
    "tqdm.*",
    "networkx.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"
preview = true

[tool.ruff.lint]
select = [
#    "DOC",      # pydoclint
#    "D",        # pydocstyle
    "ERA",      # eradicate
    "ANN",      # flake8-annotations
    "ASYNC",    # flake8-async
    "S",        # flake8-bandit
    "BLE",      # flake8-blind-except
    "FBT",      # flake8-boolean-trap
    "B",        # flake8-bugbear
    "A",        # flake8-builtins
    "COM",      # flake8-commas
    "C4",       # flake8-comprehensions
    "EM",       # flake8-errmsg
    "FIX",      # flake8-fixme
    "FA",       # flake8-future-annotations
    "ICN",      # flake8-import-conventions
    "LOG",      # flake8-logging
    "G",        # flake8-logging-format
    "INP",      # flake8-no-pep420
    "PIE",      # flake8-pie
    "T20",      # flake8-print
    "PYI",      # flake8-pyi
    "PT",       # flake8-pytest-style
    "Q",        # flake8-quotes
    "RSE",      # flake8-raise
    "RET",      # flake8-return
    "SLF",      # flake8-self
    "SIM",      # flake8-simplify
    "TID",      # flake8-tidy-imports
    "TCH",      # flake8-type-checking
    "ARG",      # flake8-unused-arguments
    "PTH",      # flake8-use-pathlib
    "FLY",      # flynt
    "I",        # isort
    "NPY",      # numpy-specific
    "N",        # pep8-naming
    "PERF",     # perflint
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "PL",       # pylint
    "UP",       # pyupgrade
    "FURB",     # refurb
    "RUF",      # ruff-specific rules
    "TRY",      # tryceratops
]
ignore = [
    "COM812",   # trailing commas are handled by the formatter
    "ANN401",   # protocol boundaries intentionally model opaque payloads with Any
    "ARG001",   # callback signatures keep unused parameters for protocol compatibility
    "ARG002",   # method signatures keep unused parameters for protocol compatibility
    "ARG005",   # test/lambda stubs keep signature-compatible kwargs
    "A002",     # public payload fields and helpers intentionally use protocol names
    "BLE001",   # defensive boundaries intentionally catch broad exceptions
    "E501",     # long addresses, selectors, and protocol strings are clearer unwrapped
    "FBT001",   # adapter APIs mirror external boolean protocol fields
    "FBT002",   # adapter APIs mirror external boolean protocol fields
    "FBT003",   # tests call external boolean protocol fields positionally
    "FIX002",   # legacy backlog notes are tracked outside the blocking lint gate
    "G004",     # logging diagnostics sometimes include structured f-string context
    "N818",     # error-suffix-on-exception-name
    "PLC0415",  # local imports are used to avoid optional dependency/cycle costs
    "PLC1901",  # explicit empty-string checks document string-only validation branches
    "PLR0911",  # too-many-return-statements
    "PLR0912",  # too-many-branches
    "PLR0913",  # too-many-arguments
    "PLR0914",  # too-many-local-variables
    "PLR0915",  # too-many-statements
    "PLR0917",  # protocol/ABI adapter functions mirror external call shapes
    "PLR2004",  # protocol constants and fixture indexes are clearer inline
    "PLR6301",  # instance methods preserve adapter/protocol object shapes
    "PYI021",   # required for IDE to show wrapped Rust code info
    "PYI046",   # private protocols document local structural typing boundaries
    "RUF067",   # non-empty-init-module
    "S101",     # asserts are used often, but not as input validation
    "S105",     # token-address constants trigger false-positive password detection
    "S404",     # subprocess use is isolated to operator verification helpers
    "S110",     # optional fallback probes intentionally suppress non-critical failures
    "TRY300",   # early returns in try blocks are clearer for adapter boundaries
    "TRY301",   # validation branches intentionally raise close to the failed check
    "TRY004",   # validation errors report bad payload values, not just bad Python types
]
logger-objects = [
    "logging.logger",
    "degenbot.logger",
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "A",        # test stubs may shadow builtins to match production APIs
    "ANN",      # type annotations for tests are low priority
    "ARG",      # test doubles keep production-compatible signatures
    "ASYNC",    # integration tests intentionally use stdlib path helpers
    "BLE",      # tests may catch broad exceptions around optional/live dependencies
    "B903",     # tiny test doubles are intentionally class-shaped
    "C90",      # high complexity tests are acceptable
    "ERA",      # commented reference addresses in fixtures are intentional
    "INP",      # test directories may be namespace-style collections
    "PLC2701",  # tests may need to import private modules
    "PLR0904",  # don't restrict the number of methods for class-based patterns
    "PLR2004",  # many tests compare results against arbitrary values — transforming to named constants is not worthwhile
    "PLR6301",  # allow tests using class-based patterns 
    "PLR0916",  # live-fixture guards may check several required environment values
    "S",        # asserts are expected for testing
    "SLF",      # tests may need to access private attributes to test implementation
    "T20",      # many tests use print
]
"tests/**/*.py" = [
    "A",        # test stubs may shadow builtins to match production APIs
    "ANN",      # type annotations for tests are low priority
    "ARG",      # test doubles keep production-compatible signatures
    "ASYNC",    # integration tests intentionally use stdlib path helpers
    "BLE",      # tests may catch broad exceptions around optional/live dependencies
    "B903",     # tiny test doubles are intentionally class-shaped
    "C90",      # high complexity tests are acceptable
    "ERA",      # commented reference addresses in fixtures are intentional
    "INP",      # test directories may be namespace-style collections
    "PLC2701",  # tests may need to import private modules
    "PLR0904",  # don't restrict the number of methods for class-based patterns
    "PLR2004",  # many tests compare results against arbitrary values — transforming to named constants is not worthwhile
    "PLR6301",  # allow tests using class-based patterns
    "PLR0916",  # live-fixture guards may check several required environment values
    "S",        # asserts are expected for testing
    "SLF",      # tests may need to access private attributes to test implementation
    "T20",      # many tests use print
]

[tool.pytest.ini_options]
addopts = [
    "--numprocesses", "4",
    "--dist", "worksteal",
    "--import-mode", "importlib",
    "--cov", "src/degenbot",
    "--cov-branch",
    "--cov-report", "html",
    "--random-order"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = "src"
python_files = "test_*.py"
testpaths = "tests"
filterwarnings = ["ignore::DeprecationWarning:websockets.legacy"]
markers = [
    "arbitrum: tests requiring an Arbitrum One mainnet RPC",
    "base: tests requiring a Base mainnet RPC",
    "database: tests requiring an operator-populated degenbot SQLite database",
    "ethereum: tests requiring an Ethereum mainnet RPC",
    "live_rpc: tests requiring public or operator-provided live RPC endpoints",
]

[dependency-groups]
dev = [
    "coverage",
    "hypothesis",
    "maturin",
    "mypy",
    "pytest-asyncio",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-random-order",
    "pytest-xdist",
    "pytest",
    "python-dotenv",
    "respx",
    "ruff",
]

[tool.uv]
exclude-newer = "14 days"
link-mode = "copy"
cache-keys = [
    {file = "pyproject.toml"}, 
    {file = "rust/Cargo.toml"}, 
    {file = "rust/src/**/*.rs"},
]

[tool.maturin]
manifest-path = "rust/Cargo.toml"
python-source = "src"
module-name = "degenbot.degenbot_rs"
bindings = "pyo3"
profile = "release"
features = ["pyo3/extension-module"]
python-packages = ["degenbot"]

[tool.alembic]
# path to migration scripts.
# this is typically a path given in POSIX (e.g. forward slashes)
# format, relative to the token %(here)s which refers to the location of this
# ini file
script_location = "%(here)s/src/degenbot/migrations"
