[package]
authors = ["BowTiedDevil <devil@bowtieddevil.com>"]
name = "degenbot_rs"
description = "Rust implementations used by the degenbot Python package."
edition = "2021"
publish = false
repository = "https://github.com/BowTiedDevil/degenbot"
license = "MIT"

[lints.rust]
warnings = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
missing_errors_doc = "allow"  # Allow missing docs for error types since we use module-level doc
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[lib]
name = "degenbot_rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
alloy = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5", version = "2.0.5", default-features = false, features = [
    "eip712",
    "full",
    "reqwest",
    "reqwest-rustls-tls",
] }
futures = { version = "^0.3" }
log = { version = "^0.4" }
lru = { version = "^0.16" }
parking_lot = { version = "^0.12" }
pyo3 = { version = "^0.28", features = [ "abi3-py312", "serde"] }
pyo3-async-runtimes = { version = "^0.28", features = ["tokio-runtime"] }
pyo3-log = { version = "^0.13" }
rand = { version = "^0.10" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
thiserror = { version = "^2.0" }
tokio = { version = "^1", features = ["rt-multi-thread", "time"] }
hotpath = { version = "0.16.1", optional = true }

# mev-arbitrum forked crates, ported to alloy 2.x / revm 38 (see the
# mev-arbitrum workspace Cargo.toml). Available to the degenbot Rust
# extension for CoW solver-engine DTOs and swap-path route storage.
cowprotocol-solvers-dto-alloy = { git = "https://github.com/mrheyday/cowprotocol-solvers-dto-alloy", branch = "main" }
swap-path = { path = "../../swap-path-alloy2" }
revm = "38"
fastbloom = "0.17"
base64 = "0.22"
tokio-tungstenite = "0.21"
tokio-stream = "0.1"
dashmap = "6.1"
ulid = "1.1"
governor = "0.10"
eyre = "0.6"
tracing = "0.1"


# Keep transitive Alloy 2.0.5 dependencies on the same pinned git source as the
# direct dependency above. Without these patches, Cargo resolves a mixed graph
# of registry and git Alloy crates with identical versions but distinct types.
[patch.crates-io]
proc-macro-error2 = { path = "vendor/proc-macro-error2" }
revm-database = { path = "../../revm-database-alloy2" }
alloy = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5" }
alloy-consensus = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5" }
alloy-consensus-any = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5" }
alloy-contract = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5" }
alloy-eips = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5" }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5" }
alloy-network = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5" }
alloy-network-primitives = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5" }
alloy-pubsub = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5" }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5" }
alloy-rpc-types-anvil = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5" }
alloy-rpc-types-any = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5" }
alloy-rpc-types-debug = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5" }
alloy-rpc-types-engine = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5" }
alloy-rpc-types-eth = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5" }
alloy-rpc-types-trace = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5" }
alloy-rpc-types-txpool = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5" }
alloy-serde = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5" }
alloy-signer-aws = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5" }
alloy-signer-gcp = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5" }
alloy-signer-ledger = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5" }
alloy-signer-local = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5" }
alloy-signer-turnkey = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5" }
alloy-transport-ipc = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5" }
alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5" }
alloy-tx-macros = { git = "https://github.com/alloy-rs/alloy.git", tag = "v2.0.5" }

[features]
default = []
extension-module = ["pyo3/extension-module"]
auto-initialize = ["pyo3/auto-initialize"]
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc"]
hotpath-cpu = ["hotpath", "hotpath/hotpath-cpu"]

[dev-dependencies]
proptest = "^1.10"

[[test]]
name = "python_integration"
required-features = ["auto-initialize"]

[profile.release]
lto = "thin"
strip = true
codegen-units = 1

[profile.bench]
inherits = "release"
debug = true
