[workspace]
members = [
    "core",
    "lp_transfer_adapter",
    "pool_adapter",
    "runtime_adapter",
    "token_risk_adapter",
]
resolver = "2"

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = 3

[patch.crates-io]
proc-macro-error2 = { path = "../rust/vendor/proc-macro-error2" }
