[package]
name = "degenbot-stylus-core"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# These are alloy-core crates used directly by Stylus SDK 0.10.7. They are
# versioned independently from the Alloy 2.x meta crate and currently publish
# on the 1.6.x line.
alloy-primitives = "=1.6.0"
alloy-sol-type-parser = "=1.6.0"
alloy-sol-types = "=1.6.0"
stylus-core = "0.10.7"
stylus-proc = "0.10.7"
stylus-sdk = "=0.10.7"

[dev-dependencies]
degenbot_contract_bindings = { path = "../../rust/crates/contract_bindings" }

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["mini-alloc"]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]
mini-alloc = ["stylus-sdk/mini-alloc"]
contract-client-gen = []
native-test = []
