[package]
name = "degenbot-pool-adapter"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
alloy-primitives = "=1.5.7"
alloy-sol-type-parser = "=1.5.7"
alloy-sol-types = "=1.5.7"
stylus-core = "0.10.7"
stylus-proc = "0.10.7"
stylus-sdk = "=0.10.7"

[dev-dependencies]
stylus-sdk = { version = "=0.10.7", features = ["stylus-test"] }
stylus-test = "0.10.7"
stylus-tools = "0.10.7"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["mini-alloc"]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]
mini-alloc = ["stylus-sdk/mini-alloc"]
contract-client-gen = []

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = 3

[workspace]
